--- a/my-try.adoc
+++ b/my-try.adoc
@@ -38,9 +38,9 @@
     <link href="//fonts.googleapis.com/" rel="dns-prefetch">
     <link href="//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic|Open+Sans:700,400&subset=latin,latin-ext" rel="stylesheet">
 
-    <link rel="stylesheet" href="//blog.chalda.cz/themes/ghostium/assets/css/main.min.css?v=1486906501913"/>
-    <link rel="stylesheet" href="//blog.chalda.cz/themes/ghostium/assets/css/custom.css?v=1486906501913"/>
-    <link rel="stylesheet" href="//blog.chalda.cz/themes/ghostium/assets/css/asciidoctor-foundation.css?v=1486906501913"/>
+    <link rel="stylesheet" href="//blog.chalda.cz/themes/ghostium/assets/css/main.min.css?v=1486906667154"/>
+    <link rel="stylesheet" href="//blog.chalda.cz/themes/ghostium/assets/css/custom.css?v=1486906667154"/>
+    <link rel="stylesheet" href="//blog.chalda.cz/themes/ghostium/assets/css/asciidoctor-foundation.css?v=1486906667154"/>
 
 
 
@@ -70,7 +70,7 @@
       GHOSTIUM.enablePjax = typeof enable_pjax !== 'undefined' ? enable_pjax : true;
     </script>
 
-    <script src="//blog.chalda.cz/themes/ghostium/assets/js/head-scripts.min.js?v=1486906501913"></script>
+    <script src="//blog.chalda.cz/themes/ghostium/assets/js/head-scripts.min.js?v=1486906667154"></script>
 
     <link rel="canonical" href="http://blog.chalda.cz/my-try.adoc" />
     <meta name="referrer" content="origin" />
@@ -80,8 +80,6 @@
     <meta property="og:title" content="This is a try on locally added" />
     <meta property="og:description" content="Table of Contents This is good to know! This is good to know! WTF!?" />
     <meta property="og:url" content="http://blog.chalda.cz/my-try.adoc" />
-    <meta property="article:tag" content="try" />
-    
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="This is a try on locally added" />
     <meta name="twitter:description" content="Table of Contents This is good to know! This is good to know! WTF!?" />
@@ -94,7 +92,7 @@ null
     <meta name="generator" content="HubPress" />
     <link rel="alternate" type="application/rss+xml" title="Chalda&#x27;s blog" href="http://blog.chalda.cz/rss/" />
   </head>
-  <body class="post-template tag-try">
+  <body class="post-template">
 
     <button data-action="open-drawer" id="drawer-button" class="drawer-button"><i class="fa fa-bars"></i></button>
     <nav tabindex="-1" class="drawer">
@@ -135,21 +133,15 @@ null
             
 <section class="wrapper wrapper-post">
   <div class="wrapper-container">
-    <article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="post post tag-try">
+    <article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="post post">
         <section class="post-container">
           <header class="post-header">
             <ul class="post-meta-list">
               <li class="post-meta-item">
-                <time datetime="Invalid date" itemprop="datePublished">
-                  Invalid date
+                <time datetime="2017-02-12" itemprop="datePublished">
+                  a few seconds ago
                 </time>
               </li>
-                <li class="post-meta-item">
-                  <span class="tags"><i class="fa fa-tags"></i>
-                      <span>
-                      <a href="http://blog.chalda.cz/tag/try/">try</a></span>
-                  </span>
-                </li>
               <li class="post-meta-item">
                 <a href="#disqus_thread" data-disqus-identifier="">Comments</a>
               </li>
@@ -207,7 +199,7 @@ null
                 <p itemprop="description" class="post-author-bio"></p>
                 <p class="post-info">
                   <b class="post-info-title">Published on</b>
-                  <time class="post-date">Invalid date</time>
+                  <time class="post-date">February 12, 2017</time>
                 </p>
               </div>
             </div>
@@ -268,7 +260,7 @@ null
         hljs.initHighlightingOnLoad();
       </script>
 
-    <script src="//blog.chalda.cz/themes/ghostium/assets/js/foot-scripts.min.js?v=1486906501913"></script>
+    <script src="//blog.chalda.cz/themes/ghostium/assets/js/foot-scripts.min.js?v=1486906667154"></script>
 
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
