--- a/_posts/2017-05-17-asciidoctor.adoc
+++ b/_posts/2017-05-17-asciidoctor.adoc
@@ -5,7 +5,7 @@
 :published_at: 2017-05-17
 :icons: font
 
-image::asciidoctor/.jpg[]
+image::asciidoctor/asciidoctor.jpg[]
 
 == Asciidoctor and AsciiDoc and the others
 
