--- a/_posts/2018-02-28-Querying-Open-Shift-API.adoc
+++ b/_posts/2018-02-28-Querying-Open-Shift-API.adoc
@@ -238,6 +238,63 @@ The next step is deploy the template with `oc new-app --template=role-testing`.
 }
 ```
 
+The same template configuration in yaml format
+
+```yaml
+kind: Template
+metadata:
+  name: role-testing
+apiVersion: v1
+parameters:
+- description: Namespace
+  displayName: namespace
+  name: NAMESPACE
+  value: myproject
+  required: true
+objects:
+- apiVersion: v1
+  kind: Role
+  metadata:
+    name: pods-listing
+  rules:
+  - apiGroups: null
+    attributeRestrictions: null
+    resources: ["pods"]
+    verbs: ["list"]
+- apiVersion: v1
+  kind: RoleBinding
+  metadata:
+    name: default
+    annotations:
+      description: "Default service account"
+  subjects:
+  - kind: ServiceAccount
+    name: default
+    namespace: ${NAMESPACE}
+  roleRef:
+    kind: Role
+    name: pods-listing
+    namespace: ${NAMESPACE}
+```
+
+[NOTE]
+====
+You can created the role by copy&paste command like this
+
+```bash
+cat <<EOF | oc create -f -
+apiVersion: v1
+kind: Role
+metadata:
+  name: pods-listing
+rules:
+- apiGroups: null
+  attributeRestrictions: null
+  resources: ["pods"]
+  verbs: ["list"]
+EOF
+====
+
 This template adds specific role with permission to `list` `pods` for service account `default`.
 You can check the running pod with `oc get pod` and `oc rsh <pod_name>` to one of the running.
 You should be able to list pods as `default` system account was enriched with role `pod-listing`.
