just small modification of yaml role listing

--- a/_posts/2018-02-28-Querying-Open-Shift-API.adoc
+++ b/_posts/2018-02-28-Querying-Open-Shift-API.adoc
@@ -290,8 +290,10 @@ metadata:
 rules:
 - apiGroups: null
   attributeRestrictions: null
-  resources: ["pods"]
-  verbs: ["list"]
+  resources:
+  - pods
+  verbs:
+  - list
 EOF
 ====
 
