hibernate article renamed with adoc, example link added

--- a/_posts/2018-05-10-Hibernate-standalone-generate-database-schema.adoc
+++ b/_posts/2018-05-10-Hibernate-standalone-generate-database-schema.adoc
@@ -20,6 +20,8 @@ What the preconditions were
 * write and query data while the data structure is pretty simple
 
 
+CODE EXAMPLE: https://github.com/ochaloup/hibernate-standalone
+
 
 
 * SQL for PostgreSQL to query all tables:
