--- a/_posts/2018-05-04-Vim-plugin-to-work-with-text-highlighting.adoc
+++ b/_posts/2018-05-04-Vim-plugin-to-work-with-text-highlighting.adoc
@@ -31,34 +31,40 @@ image::articles/content/vim-match-command.png[]
 
 But this is restricted only to three text patterns to be highlighted. If you need
 more you can define your own arbitrary syntax match rules with `:syntax match DiffAdd /2018-[^ ]*/`.
-This sounds fine but it requires more text typing than I liked. And I feel another pain point
-- when I closed the log file and wanted to get back to investigation after a while
-all the highlighting was lost.
+This sounds fine but it requires more text typing than I liked.
+
+The second pain point that I feel was loosing all the knowledge connected with the hightligting
+the important parts of the texts (in my case they were identifiers in the server log)
+when I closed the file. I longed for the tool which preserves the colors for me.
 
 == Vim synax match plugin
 
-I decided to create a Vim plugin which addresses my objections and makes my life easier.
-You can find it at https://github.com/ochaloup/vim-syntax-match
+As I haven't found any I decided to created a Vim plugin adressing all my desires on my own.
 
-If you install it and wish to get highlighted the mentioned pattern you can write
-only `:Y 2018-[^ ]*`.
+And you can find it at https://github.com/ochaloup/vim-syntax-match
 
-What it brings?
+What it offers? As it was said:
 
 * text highlighting shortcuts for several colors, like `:Y <pattern>` for yellow background or
   `:GF <pattern>` for green foreground
 * saving the existing highlighting pattern to be loaded next time the file is opened
-  (works with `.txt` and `.log` files)
+  (automatically works with `.txt` and `.log` files)
 
-Check all the helper commands at the https://github.com/ochaloup/vim-syntax-match#helper-commands[README file]
-and you can read how https://github.com/ochaloup/vim-syntax-match#how-works-internally[this works in details there too].
+If you install it and wish to get highlighted the pattern introduced in the initial section of this blogpost,
+you can write just(!) `:Y 2018-[^ ]*`.
+
+If you want to know what all the shortcuts the plugin offers don't hesitate to check
+the helper commands at the https://github.com/ochaloup/vim-syntax-match#helper-commands[README file]
+and you can read all the details how the plugin works at https://github.com/ochaloup/vim-syntax-match#how-works-internally.
 
 == How to install
 
-See guidelines at the `README` file https://github.com/ochaloup/vim-syntax-match#how-to-install.
 In short you need to have installed http://www.vim.org/scripts/script.php?script_id=2332[pathogen plugin]
 and then just clone the https://github.com/ochaloup/vim-syntax-match[vim syntax match] respository
 under folder `.vim/bundle`.
+
+For whole installation guidelines see
+`README` file at https://github.com/ochaloup/vim-syntax-match#how-to-install.
 
 == Tips
 
